2008-05-23  Zoltan Varga  <vargaz@gmail.com>

	* class-internals.h class.c: Correct the name of the 'mono_no_setup_vtable_in_class_init' variable.

	* class.c (mono_class_init): Control the creation of a generic vtable using
	a global which is true by default, but set to false by the runtime startup code.
	
	* class.c (mono_class_init): Avoid constructing a generic vtable in most cases.
	Disabled for now since it breaks the embedding API.
	Move the setup of class->methods for arrays to mono_class_setup_methods ().
	(mono_class_setup_methods): Add a memory barrier.

	* object.c (mono_class_create_runtime_vtable): Add code to handle the case
	when mono_class_init () doesn't compute the generic vtable.
	
2008-05-23  Massimiliano Mantione  <massi@ximian.com>
	* profiler.c: Added mono_profiler_install_statistical_call_chain,
	mono_profiler_stat_get_call_chain_depth and mono_profiler_stat_call_chain
	to support call chains (backtrace) in the stat profiler.
	* profiler.c, profiler-private.h: Likewise.

2008-05-22  Mark Probst  <mark.probst@gmail.com>

	* generic-sharing.c: Init generic class when a method of it is
	requested via a runtime generic context.

2008-05-22  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_init): Add a comment about trying to avoid calling this.

	* reflection.c (mono_type_get_object): Add a FIXME.

	* loader.c (find_method_in_class): Use mono_class_get_method_by_index ().

	* class.c (mono_class_get_method_by_index): New helper function, returning an
	entry in the class->methods array.

2008-05-21  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_init): Only do the array optimization for szarrays. 
	Avoid creating a generic vtable for generic instances as well.
	(mono_class_get_method_from_name_flags): Don't search in the metadata for
	generic instances.

2008-05-21 Rodrigo Kumpera  <rkumpera@novell.com>

	* loader.c (mono_get_method_constrained): Inflate the signature
	with class context. Fix #325283.
